# go-spacemesh

./: go.mod  go.sum
activation/: activation.go  atxdb.go
cmd/node/: app_test.go  node.go
cmd/sync/: sync.go
contract/: context.go  contract.go  contract_id.go  contract_id_test.go  contract_registry.go  contract_registry_test.go  contract_test.go  inmemory_contract_registry.go  inmemory_contract_registry_test.go  vm.go  vm_test.go
contract/gas/: price.go
contract/precompiled/rust/nop/: Cargo.toml  build.sh
contract/precompiled/rust/nop/src/: lib.rs
contract/precompiled/rust/transfer/: Cargo.toml  build.sh
contract/precompiled/rust/transfer/src/: lib.rs
contract/precompiled/wasm/: nop_contract.wasm  nop_contract.wast  transfer_contract.wasm  transfer_contract.wast
hare/: algorithm.go  broker.go  messagevalidation.go
log/: log.go  zap.go
mesh/: mesh.go  mesh_test.go
miner/: block_builder.go
nipst/: nipst.go
oracle/: blockoracle.go
p2p/: message.go  swarm.go
p2p/discovery/: addrbook.go  getaddress.go  ping.go  protocol.go  store.go
p2p/gossip/: protocol.go  protocol_test.go
p2p/net/: conn.go
p2p/service/: service.go  sim.go
sync/: block_listener.go  block_listener_test.go  handler.go  requests.go  syncer.go  syncer_test.go
tests/: analyse.py  config.yaml  queries.py  test_bs.py
tests/k8s/: bootstrapoet-w-conf.yml
tests/monitoring/: atx_published.py
tortoise/: algorithm.go  ninja_tortoise.go
types/: activation.go  receipt.go
