[package]
name = "transfer-contract"
version = "0.0.0"
authors = ["Yaron Wittenstein <yaron.wittenstein@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
opt-level = "z"
debug = false

[dependencies]
wee_alloc = { version = "0.4.4", default-features = true }
